--- a/dlnd_tv_script_generation.html
+++ b/dlnd_tv_script_generation.html
@@ -12898,7 +12898,7 @@ Model Trained and Saved
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[170]:</div>
+<div class="prompt input_prompt">In&nbsp;[1]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="sd">&quot;&quot;&quot;</span>
@@ -12937,7 +12937,7 @@ Model Trained and Saved
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[171]:</div>
+<div class="prompt input_prompt">In&nbsp;[2]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="k">def</span> <span class="nf">get_tensors</span><span class="p">(</span><span class="n">loaded_graph</span><span class="p">):</span>
@@ -13006,7 +13006,7 @@ Model Trained and Saved
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[173]:</div>
+<div class="prompt input_prompt">In&nbsp;[14]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="k">def</span> <span class="nf">pick_word</span><span class="p">(</span><span class="n">probabilities</span><span class="p">,</span> <span class="n">int_to_vocab</span><span class="p">):</span>
@@ -13017,11 +13017,8 @@ Model Trained and Saved
 <span class="sd">    :return: String of the predicted word</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="c1"># TODO: Implement Function</span>
-    <span class="c1">#index_of_max_prob = max(enumerate(probabilities), key=lambda p: p[1])</span>
-    <span class="n">indices_of_k_max_prob</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">argpartition</span><span class="p">(</span><span class="n">probabilities</span><span class="p">,</span> <span class="o">-</span><span class="n">BEAM_WINDOW</span><span class="p">)[</span><span class="o">-</span><span class="n">BEAM_WINDOW</span><span class="p">:]</span>
-    <span class="n">random_index</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">random</span><span class="o">.</span><span class="n">choice</span><span class="p">(</span><span class="n">indices_of_k_max_prob</span><span class="p">)</span>
-    <span class="n">next_word</span> <span class="o">=</span> <span class="n">int_to_vocab</span><span class="p">[</span><span class="n">random_index</span><span class="p">]</span>
-    <span class="k">return</span> <span class="n">next_word</span>
+    <span class="n">next_word</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">random</span><span class="o">.</span><span class="n">choice</span><span class="p">(</span><span class="nb">list</span><span class="p">(</span><span class="n">int_to_vocab</span><span class="o">.</span><span class="n">values</span><span class="p">()),</span> <span class="mi">1</span><span class="p">,</span> <span class="n">p</span><span class="o">=</span><span class="n">probabilities</span><span class="p">)</span>
+    <span class="k">return</span> <span class="n">next_word</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span>
 
 
 <span class="sd">&quot;&quot;&quot;</span>
@@ -13063,7 +13060,7 @@ Model Trained and Saved
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[183]:</div>
+<div class="prompt input_prompt">In&nbsp;[21]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">gen_length</span> <span class="o">=</span> <span class="mi">200</span>
@@ -13124,17 +13121,21 @@ Model Trained and Saved
 <div class="prompt"></div>
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>moe_szyslak:(excited, beat) nobody wants!
-marge_simpson: it tastes! take me!
-homer_simpson: and i&#39;d like a half stupid flanders with duff!(worried) oh sure.
-moe_szyslak: yeah, well, whenever there is this. of you. but would be nice and moe. a lotta have some tab? / am looking a right. with the giant were on a scam. and my once in the air of is so rude.(worried crack)
-kent_brockman: don&#39;t do anything.
-homer_simpson:(noticing something in) hey, moe! it&#39;s great. now what have the best label to and my kids his smell goodbye? /(serious) oh i&#39;m the call it a closed.(takes to drink
-nobody burns sure!
-homer_simpson:(groans,) she must take it! if it sounds... wheeeee moe? homer sucked it?.
-lloyd: my undies&#34; / so i had a huge compliment the springfield isotopes!
-barney_gumble: hey moe, you sure any till.
-carl_carlson: aw and
+<pre>moe_szyslak: excuse me, will you?(choked-up knowingly)
+carl_carlson: that, who wants a bathtub mint julep?
+moe_szyslak: well, if you think we could write the money back?
+lenny_leonard: well, well, there&#39;s a little trick. i pictured everyone in tin foil at the end of the way, but the secret ingredient dies.
+moe_szyslak: now, no. have a happy with my bar, kid. and(amused on) it was, all right, all right! harvard here you go, bowling.
+
+
+homer_simpson: wait, krusty... general!?
+moe_szyslak: yeah. i keep meaning to switch leave, but this place up, a little softer. o&#39;reilly.
+moe_szyslak: here you go. i&#39;ve got a picture of you like crap.
+carl_carlson: i&#39;ll take your money, homer.
+
+
+moe_szyslak: hey! if you guys are getting loaded off your each goodbye.
+moe_szyslak: okay, here comes our victim. let&#39;s bash his every move a day... so, uh,
 </pre>
 </div>
 </div>
